feat: 더이상 사용하지 않는 post domain 제거
