# src/main/kotlin/com/example/kotlinspringbootsample/presentation/post/request/PostDeleteRequest.kt
@@ -1,6 +1,0 @@
-package com.example.kotlinspringbootsample.presentation.post.request
-
-data class PostDeleteRequest(
-    val username: String,
-    val password: String
-)
