# src/main/kotlin/com/example/kotlinspringbootsample/presentation/post/request/PostRequest.kt
@@ -1,8 +1,0 @@
-package com.example.kotlinspringbootsample.presentation.post.request
-
-data class PostRequest(
-    val title: String,
-    val content: String,
-    val username: String,
-    val password: String
-)
