# src/main/kotlin/com/example/kotlinspringbootsample/presentation/post/response/PostResponse.kt
@@ -1,7 +1,0 @@
-package com.example.kotlinspringbootsample.presentation.post.response
-
-data class PostResponse(
-    val title: String,
-    val content: String,
-    val username: String
-)
